Edited wiki page GSRf through web user interface.

--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -21,4 +21,6 @@ Obtain a dated species tree in Newick format. The dates may be specified as bran
 
 or analogously
 
-{{{((A[&&PRIME NT=0.0],B[&&PRIME NT=0.0])[&&PRIME NT=0.4],C[&&PRIME NT=0.0])[&&PRIME NT=1.0][&&PRIME TT=0.5];}}}.
+{{{((A[&&PRIME NT=0.0],B[&&PRIME NT=0.0])[&&PRIME NT=0.4],C[&&PRIME NT=0.0])[&&PRIME NT=1.0][&&PRIME TT=0.5];}}}
+
+The host tree must be ultrametric, with time 0 at the leaves and >0 at the root, and a "stem" length >0 (above, this  is set to 0.5). The scale of the dates can be any unit: *they will be rescaled internally s.t. the root time is 1.0 before running, and the output will refer to this*.
