--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -5,12 +5,12 @@
 JPrIME-GSRf is a phylogenetic application for reconciling an unknown guest tree and a known host tree by means of duplication events and loss events. Typically, the guest tree corresponds to a gene tree, and the host tree corresponds to a species tree. JPrIME-GSRf relies on Bayesian inference using an MCMC framework. Thus, it will yield a posterior distribution of guest tree topologies and remaining parameters.
 
 *Input:*
-  # a file with a dated host tree.
-  # a file with multialignment of guest tree leaf sequences.
-  # a file with a simple map relating the guest tree leaves to host tree leaves.
+  * a file with a dated host tree.
+  * a file with multialignment of guest tree leaf sequences.
+  * a file with a simple map relating the guest tree leaves to host tree leaves.
 
 *Output:*
-  # a file with samples drawn from the posterior distribution.
+  * a file with samples drawn from the posterior distribution.
 
 == Running ==
  
