Edited wiki page GSRf through web user interface.

--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -15,11 +15,11 @@ JPrIME-GSRf is a phylogenetic application for reconciling an unknown guest tree 
 == Running ==
  
 === Host tree ===
-Obtain a dated species tree in Newick format. The divergence times may be specified as branch lengths, or as absolute times using special formatting, e.g.
+Obtain a dated species tree in Newick format. The divergence times may be specified as branch lengths, e.g.:
 
 {{{((A:0.4,B:0.4):0.6,C:1.0):0.5;}}}
 
-or analogously
+Alternatively, one can specify absolute times using special formatting:
 
 {{{((A[&&PRIME NT=0.0],B[&&PRIME NT=0.0])[&&PRIME NT=0.4],C[&&PRIME NT=0.0])[&&PRIME NT=1.0][&&PRIME TT=0.5];}}}
 
