Edited wiki page GSRf through web user interface.

--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -1,4 +1,4 @@
-#summary Description and instructions for GSRf reconciliation application.
+#summary Description and instructions for GSRf.
 
 = GSRf =
 
