--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -25,4 +25,4 @@ Alternatively, one can specify absolute times using special formatting:
 
 The host tree must be ultrametric, with time 0 at the leaves and >0 at the root, and a "stem" of length >0 (above, this  is set to 0.5). The scale of the dates can be any unit: *they will be rescaled internally prior to running so that the root time is 1.0, and the output will refer to this scaling*, and not the original.
 
-A good resource for divergence times is [http://www.timetree.org]. If you cannot find references to reliable divergence times, you will need to date the tree yourself. Typically, this is achieved by obtaining a set of putative core gene families (e.g. monocopy putative orthologs), aligning these, then feeding the concatenated super-alignment into a program which estimates divergence times. 
+A good resource for divergence times is [http://www.timetree.org]. If you cannot find references to reliable divergence times, you will need to date the tree yourself. Typically, this is achieved by obtaining a set of putative core gene families (e.g. monocopy putative orthologs), aligning these, then feeding the concatenated super-alignment into a program which estimates divergence times. For acquiring core genes for microbial datasets [http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0024704] may be of help. For dating, consider e.g. [http://www.biomedcentral.com/1471-2148/8/77], [http://www.phylobayes.org] or [http://loco.biosci.arizona.edu/r8s/].
