--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -41,4 +41,4 @@ MNKKELIKSIAEVNKTSITQTEEFYNSFENALIKAI
 >c2
 MNKKELIKSIAEVNKTSITQTEEFYNSFENALIKAI
 }}}
-Please consider clearing ambiguous positions from the alignment using e.g. [http://trimal.cgenomics.org trimAl] or [http://molevol.cmima.csic.es/castresana/Gblocks.html Gblocks].
+Please consider clearing ambiguous positions from the alignment using e.g. [http://trimal.cgenomics.org trimAl] or [http://molevol.cmima.csic.es/castresana/Gblocks.html Gblocks] before feeding it into JPrIME-GSRf.
