--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -56,12 +56,12 @@ c2   C
 == Output ==
 Output normally consists of two files, e.g.:
   * {{{myoutput.info}}}, containing general pre- and post-run information.
-  * {{{myoutput.mcmc}}}, containing the samples drawn from the posterior distribution.
+  * {{{myoutput.mcmc}}}, containing tab-delimited samples drawn from the posterior distribution.
 The latter will look something like:
 {{{
-N       L           Param1   Param2   Param3
-0       1.5e-64   1.0          0.1         0.1
-200   2.4e-32   0.56        0.23       0.43
-400   1.5e-30   0.51        0.18      0.52
+N       L         Param1     Param2   Param3
+0       1.5e-64   1.0        0.1      0.1
+200     2.4e-32   0.56       0.23     0.43
+400     1.5e-30   0.51       0.18     0.52
 ...
 }}}
