Edited wiki page GSRf through web user interface.

--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -67,3 +67,6 @@ N       L         Param1     Param2   Param3
 400     1.5e-30   0.51       0.18     0.52
 ...
 }}}
+
+== -------------------- RUNNING -------------------- ==
+TBD
