--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -70,3 +70,6 @@ N       L         Param1     Param2   Param3
 
 == -------------------- RUNNING -------------------- ==
 TBD
+
+== -------------------- ANALYSIS -------------------- ==
+TBD
