--- a/wiki/CreatingReleases.wiki
+++ b/wiki/CreatingReleases.wiki
@@ -2,4 +2,8 @@
 
 = How to create releases of JPrIME =
 
-Unknown as of yet. Probably, we'll package everything it to a single JAR using [http://maven.apache.org/plugins/maven-jar-plugin/ Maven JAR Plugin]. Perhaps dependencies can be included, see e.g. [http://stackoverflow.com/questions/574594/how-can-i-create-an-executable-jar-with-dependencies-using-maven this page] on StackOverflow.
+Unknown as of yet. Probably, we'll package everything it to a single JAR using [http://maven.apache.org/plugins/maven-jar-plugin/ Maven JAR Plugin].
+
+Perhaps dependencies can be included too, see e.g. [http://stackoverflow.com/questions/574594/how-can-i-create-an-executable-jar-with-dependencies-using-maven this page] on StackOverflow.
+
+A tool for listing all (non-transitive) depencies from the root pom.xml can be found in {{{JPrIME/src/main/python/getmavendependencies/GetMavenDependencies.py}}}
