Edited wiki page GSRf through web user interface.

--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -3,11 +3,13 @@
 = JPrIME-GSRf =
 
 == CONTENTS ==
-  # [GSRf#INTRODUCTION]
-  # [GSRf#INPUT]
-  # [GSRf#OUTPUT]
-  # [GSRf#RUNNING]
-  # [GSRf#ANALYSIS]
+  # [GSRf#INTRODUCTION Introduction]
+  # [GSRf#INPUT Input]
+  # [GSRf#OUTPUT Output]
+  # [GSRf#RUNNING Running]
+  # [GSRf#ANALYSIS Analysis]
+
+----
 
 == INTRODUCTION ==
 
@@ -20,6 +22,8 @@ JPrIME-GSRf is a phylogenetic application for reconciling an unknown guest tree 
 
 *Output:*
   * a file with samples drawn from the posterior distribution.
+
+----
 
 == INPUT ==
  
@@ -62,6 +66,8 @@ c1   C
 c2   C
 }}}
 
+----
+
 == OUTPUT ==
 Output normally consists of two files, e.g.:
   * {{{myoutput.info}}}, containing general pre- and post-run information.
@@ -75,12 +81,16 @@ N       L         Param1     Param2   Param3
 ...
 }}}
 
+----
+
 == RUNNING ==
 Typically, you would start it by running e.g.:
 {{{
 java -cp mypath/jprime-0.0.0.jar se.cbb.jprime.apps.gsrf
 }}}
 where the path and version number of course refer to your current setup.
+
+----
 
 == ANALYSIS ==
 To be announced. However, consider using CRAN R in general, and, for convergence in particular, its [http://cran.r-project.org/web/packages/coda/index.html CODA package].
