--- a/wiki/DevelopersGuide.wiki
+++ b/wiki/DevelopersGuide.wiki
@@ -11,7 +11,7 @@ The latest verified version is shown within brackets.
   # Download and install Eclipse {{{[Eclipse Helios]}}}.
     * You probably want to set the default encoding to UTF-8 in Eclipse for both "Eclipse -> Preferences -> General -> Workspace" and all text content types under "Eclipse -> Preferences -> General -> Content Types".
     * You probably want to show .resource files in Eclipse. This can be changed by pressing the "down-arrow" in the Package Explorer, and then clicking Filters...
-    * To run Eclipse smoothly, you probably want to set the path to the proper VM and the memory settings in eclipse.ini.
+    * To run Eclipse smoothly, you probably want edit eclipse.ini to set the path to the VM and set decent memory allocation settings.
   # Download and Install required tools:
     * Install Maven {{{[Maven 2]}}}.
     * Possibly install external Subversion (SVN) client if Subversive not sufficient (see below).
