Edited wiki page DevelopersGuide through web user interface.

--- a/wiki/DevelopersGuide.wiki
+++ b/wiki/DevelopersGuide.wiki
@@ -10,7 +10,7 @@ The latest verified version is shown within brackets.
 
   # Download and install Eclipse {{{[Eclipse Helios]}}}.
     * You probably want to set the default encoding to UTF-8 in Eclipse for both "Eclipse -> Preferences -> General -> Workspace" and all text content types under "Eclipse -> Preferences -> General -> Content Types".
-    * You probably want to show .resource files in Eclipse. This can be changed by pressing the "down-arrow" in the Package Explorer, and then clicking Filters...
+    * You probably want to show .resource files in Eclipse. This can be changed by pressing the small down-arrow in the Package Explorer, and then clicking "Filters...".
     * To run Eclipse smoothly, you probably want edit eclipse.ini to set the path to the VM and set decent memory allocation settings.
   # Download and Install required tools:
     * Install Maven {{{[Maven 2]}}}.
@@ -22,7 +22,7 @@ The latest verified version is shown within brackets.
   # Go to the SVN Repository Exploring perspective and add the repository. The location, your username and password can be found under the Source page on this wiki.
   # In the Java perspective, add the project as an existing SVN project. You might have to browse for the trunk.
   # Under project settings, set the Java version to 1.6.
-  # Activate Maven for the project by "Maven -> Enable Dependency Management".
+  # Activate Maven by right-clicking the project and clicking "Maven -> Enable Dependency Management" or possibly "Configure -> Convert to Maven Project". You may need to refresh the project afterwards.
   # Start coding! (...possibly by creating a new branch first!)
 
 == Version control ==
