--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -90,6 +90,8 @@ java -cp mypath/jprime-0.0.0.jar se.cbb.jprime.apps.gsrf
 }}}
 where the path and version number of course refer to your current setup. You may want to tune the Java VM to your specific needs (heap size, performance tuning options, etc.). This is a non-trivial area however. If you are using an Oracle Java HotSpot VM, these documents may be of assistance: [http://www.oracle.com/technetwork/java/hotspotfaq-138619.html Oracle Java HotSpot VM FAQ] and [http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html Oracle Java HotSpot VM Options].
 
+Typically, you will first make pilot runs in which you can assess the mixing and change tuning parameters accordingly. Try striving for model parameter acceptance ratios of 0.2-0.5 (preferrably in the lower region). For topology perturbation, the acceptance ratios will typically be much lower, and cannot really be tuned.
+
 ----
 
 == ANALYSIS ==
