Edited wiki page DevelopersGuide through web user interface.

--- a/wiki/DevelopersGuide.wiki
+++ b/wiki/DevelopersGuide.wiki
@@ -34,11 +34,13 @@ Builds are handled using the very competent (and alas complex) framework Maven. 
 == File structure ==
 The source file structure adheres to the Maven standard directory layout (as a subset thereof). Before adding new root folders, consider using a folder name proposed by this standard. Of particular importance are:
   * {{{src/main/java}}} - where main Java source code goes.
+  * {{{src/main/resources}}} - where peripheral files for an actual release go.
   * {{{src/main/python}}} - where additional Python source code goes.
   * {{{src/test/java}}} - where Java unit tests and test suites go.
+  * {{{src/test/java}}} - where peripheral files for Java unit tests go.
   * {{{target}}} - where local builds are kept (not under version control).
   * {{{lib}}} - where non-Mavenized dependencies are kept, see below.
-Furthermore, non-Java resources kan be maintained in the same manner, e.g. {{{src/main/python}}} and so forth.
+Furthermore, non-Java resources kan be maintained in the same manner, e.g. {{{src/main/shellscript}}} and so forth.
 
 == Dependencies ==
 Maven handles all external dependencies (most commonly JAR files). Typically, for a user, true Mavenized dependencies (and sub-dependencies!) are retrieved and stored under the {{{~/.m2}}} folder.
