--- a/wiki/CreatingReleases.wiki
+++ b/wiki/CreatingReleases.wiki
@@ -4,7 +4,7 @@
 
 Naturally, we use Maven for building and packaging. The pom.xml has been set to JAR packaging, and also to use the Maven Shade plugin. This means that on packaging, two kinds of output should be generated in the target directory:
   # An original JPrIME JAR file.
-  # An "über" (or "shaded", if you wish) JAR file, which ideally contains JPrIME bundled with all dependencies.
+  # An "über" (or "shaded", if you wish) JPriME JAR file, which contains (1) bundled with all dependencies.
 
 In Eclipse, packaging JPrIME should be as easy as to right-click the project root folder and selecting "Run as -> Maven package", or, from the command prompt, {{{mvn package}}}. This will generate a snapshot build, although manually renaming JAR files and keeping track of version numbers should be sufficient for our needs.
 
