--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -54,7 +54,7 @@ MNKKELIKSIAEVNKTSITQTEEFYNSFENALIKAI
 >c2
 MNKKELIKSIAEVNKTSITQTEEFYNSFENALIKAI
 }}}
-Please consider clearing ambiguous positions from the alignment using e.g. [http://trimal.cgenomics.org trimAl] or [http://molevol.cmima.csic.es/castresana/Gblocks.html Gblocks] before feeding it into JPrIME-GSRf.
+Please consider clearing ambiguous positions from the alignment before feeding it into JPrIME-GSRf. There are many such applications, e.g., [http://trimal.cgenomics.org trimAl], [http://molevol.cmima.csic.es/castresana/Gblocks.html Gblocks], [http://guidance.tau.ac.il GUIDANCE] and [http://zfmk.de/web/Forschung/Tagungen/2012/201202_GfBS/Workshops/ALISCORE/index.de.html, ALISCORE].
 
 === Mapping ===
 The guest-to-host leaf map is straighforward, e.g., for the example above:
