--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -41,7 +41,7 @@ The host tree must be ultrametric, with time 0 at the leaves and >0 at the root,
 A good resource for divergence times is [http://www.timetree.org]. If you cannot find references to reliable divergence times, you will need to date the tree yourself. Typically, this is achieved by obtaining a set of "core" gene families (e.g. monocopy putative orthologs), aligning these, then feeding the concatenated super-alignment into a program which estimates divergence times. For acquiring core genes for microbial datasets [http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0024704 this article] may be of help. For dating, consider e.g. [http://www.biomedcentral.com/1471-2148/8/77 MAP-DP], [http://www.phylobayes.org PhyloBayes] or [http://loco.biosci.arizona.edu/r8s r8s].
 
 === Multialignment ===
-The multialignments can be computed with any suitable program (MAFFT, MUSCLE, CLUSTAL, etc.), but should be provided on the Fasta format, e.g. for the example above:
+The multialignments can be computed with any suitable program (MAFFT, MUSCLE, CLUSTAL, etc.), but should be provided on the FASTA format, e.g. for the example above:
 {{{
 >a1
 MTKKELIKSIAEKNKTSITQTEEFYNSFENAIIKAI
